edit to wording
changed tagline in paragraph

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>CoreWarrior</h1>
-<p>We Are All Warriors. Be Solid To The Core.</p>
+<p>We All Are Warriors. Be Fierce To The Core.</p>
 </body>
 </html>
