--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>CoreWarrior</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css"
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<h1>CoreWarrior</h1>
-<p>We All Are Warriors. Be Fierce To The Core.</p>
+    <h1>CoreWarrior</h1>
+    <p>We All Are Warriors. Be Fierce To The Core.</p>
 </body>
 </html>
